# openenv-courtroom-sim

./: .gitignore  Dockerfile  README.md  courtroom_schemas.py  disaster_sim.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  schemas.py  tasks.py
server/: app.py
