[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "courtroom-sim"
version = "0.1.0"
description = "Multi-Agent Indian Courtroom RL Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx",
    "openenv-core"
]
