[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disasterops-env"
version = "1.0.0"
description = "Emergency Disaster Response & Resource Coordination OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx",
    "openenv-core"
]

[project.scripts]
server = "server.app:main"
